bonus/confs/gitlab-dependencies.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: gitlab
spec:
  selector:
    app: postgresql
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: gitlab
spec:
  serviceName: postgresql
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:17-alpine
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ReadWriteOnce]
      resources:
        requests:
          storage: 8Gi
---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace:  gitlab
spec:
  selector:
    app:  redis
  ports:
  - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  redis
  template:
    metadata:
      labels:
        app:  redis
    spec:
      containers:
      - name: redis
        image:  redis:7-alpine
        args: ["--save", "", "--appendonly", "no"]
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: gitlab
spec:
  selector:
    app:  minio
  ports:
  - port: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace:  gitlab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app:  minio
  template:
    metadata:
      labels:
        app:  minio
    spec:
      containers:
      - name: minio
        image:  minio/minio:latest
        args: ["server", "/data"]
        ports:
        - containerPort:  9000
        volumeMounts:
        - name: data
          mountPath:  /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName:  minio-data
