bonus/confs/bonus_app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-playground
  namespace: dev
spec:
  ingressClassName: traefik
  rules:
  - host: local.wil.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil-playground
            port:
              number: 8888
